--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-	<title>aclark4life/Parse-to-Plone @ GitHub</title>
+	<title>aclark4life/Parse2Plone @ GitHub</title>
 	
 	<style type="text/css">
 		body {
@@ -34,22 +34,22 @@
 </head>
 
 <body>
-  <a href="http://github.com/aclark4life/Parse-to-Plone"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+  <a href="http://github.com/aclark4life/Parse2Plone"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
   <div id="container">
 
     <div class="download">
-      <a href="http://github.com/aclark4life/Parse-to-Plone/zipball/master">
+      <a href="http://github.com/aclark4life/Parse2Plone/zipball/master">
         <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/aclark4life/Parse-to-Plone/tarball/master">
+      <a href="http://github.com/aclark4life/Parse2Plone/tarball/master">
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <h1><a href="http://github.com/aclark4life/Parse-to-Plone">Parse-to-Plone</a>
+    <h1><a href="http://github.com/aclark4life/Parse2Plone">Parse2Plone</a>
       <span class="small">by <a href="http://github.com/aclark4life">aclark4life</a></span></h1>
 
     <div class="description">
-      ``Parse to Plone`` is my lxml/soup parser (in the form of a Buildout recipe) to  get content from static HTML files into Plone.
+    ``Parse2Plone`` is an lxml/soup parser (in the form of a Buildout recipe that creates a script for you) to easily get content from static HTML files into Plone.
     </div>
 
     <h2>Authors</h2>
@@ -61,16 +61,16 @@
     <h2>Download</h2>
     <p>
       You can download this project in either
-      <a href="http://github.com/aclark4life/Parse-to-Plone/zipball/master">zip</a> or
-      <a href="http://github.com/aclark4life/Parse-to-Plone/tarball/master">tar</a> formats.
+      <a href="http://github.com/aclark4life/Parse2Plone/zipball/master">zip</a> or
+      <a href="http://github.com/aclark4life/Parse2Plone/tarball/master">tar</a> formats.
     </p>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
-      <pre>$ git clone git://github.com/aclark4life/Parse-to-Plone</pre>
+      <pre>$ git clone git://github.com/aclark4life/Parse2Plone</pre>
     </p>
 
     <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/aclark4life/Parse-to-Plone">aclark4life/Parse-to-Plone</a>
+      get the source code on GitHub : <a href="http://github.com/aclark4life/Parse2Plone">aclark4life/Parse2Plone</a>
     </div>
 
   </div>
