--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <span class="small">by <a href="http://github.com/aclark4life">aclark4life</a></span></h1>
 
     <div class="description">
-    ``Parse2Plone`` is an lxml/soup parser (in the form of a Buildout recipe that creates a script for you) to easily get content from static HTML files into Plone.
+    ``Parse2Plone`` is an HTML parser (in the form of a Buildout recipe that creates a script for you) to easily get content from static HTML files into Plone.
     </div>
 
     <h2>Authors</h2>
