--- a/sample_data/index.html
+++ b/sample_data/index.html
@@ -1,4 +1,4 @@
-<p>
+<p class="bar">
 	Tellus venenatis nonummy pellentesque fermentum proin quis. Rutrum pharetra montes orci aliquam in, id morbi sit pede dui fames. Proin nisl erat eget turpis ve leo odio. Condimentum egestas porta duis. Conubia elit elit eni fusce adipiscing lacinia mus torquent phasellus nascetur nisi per lorem. Eni. Quam. Nisi commodo hendrerit molestie orci libero leo. Viverra. Ut, condimentum ve, mauris sollicitudin posuere felis nibh praesent. Mi. Metus eget pede. In sem nisl hac commodo curae, cubilia ut, eu netus rutrum tellus porttitor et, tortor. Urna vel lacus cum. Mi consectetuer platea ornare, vivamus quis eu sollicitudin nostra. Mattis. Eleifend facilisis, nisl nam porta. Curabitur tempus fames platea. Molestie, curae feugiat netus vestibulum ve, senectus.
 </p>
 <p>
